# Sugi_2306

./: .gitattributes  .gitignore  README.md  Sugi2306_faprotax.py  Sugi2306_faprotax_mod.py  pyproject.toml
scripts/: FAPROTAX.py  config.example.py  main.py
